# AI_T2_Lab

./: .funcignore  .gitignore  README.md  api.py  function_app.py  ingestion.py  pyproject.toml  requirements.txt
backend/: constants.py  data_models.py  rag.py
frontend/: app.py  ui_components.py
